@@ -53,6 +53,7 @@ import org.apache.cassandra.db.view.View;
 import org.apache.cassandra.dht.AbstractBounds;
 import org.apache.cassandra.exceptions.*;
 import org.apache.cassandra.index.SecondaryIndexManager;
+import org.apache.cassandra.index.sasi.SASIIndex;
 import org.apache.cassandra.serializers.MarshalException;
 import org.apache.cassandra.service.ClientState;
 import org.apache.cassandra.service.ClientWarn;
@@ -289,19 +290,19 @@ public class SelectStatement implements CQLStatement
              : size.inRows();
     }
 
-    public ReadQuery getQuery(QueryOptions options, int nowInSec) throws RequestValidationException
+    public ReadQuery getQuery(QueryState queryState, QueryOptions options, int nowInSec) throws RequestValidationException
     {
-        return getQuery(options, nowInSec, getLimit(options), getPerPartitionLimit(options), getPageSize(options));
+        return getQuery(queryState, options, nowInSec, getLimit(options), getPerPartitionLimit(options), getPageSize(options));
     }
 
-    public ReadQuery getQuery(QueryOptions options, int nowInSec, int userLimit, int perPartitionLimit, int pageSize)
+    public ReadQuery getQuery(QueryState queryState, QueryOptions options, int nowInSec, int userLimit, int perPartitionLimit, int pageSize)
     {
         boolean isPartitionRangeQuery = restrictions.isKeyRange() || restrictions.usesSecondaryIndexing();
 
         DataLimits limit = getDataLimits(userLimit, perPartitionLimit, pageSize);
 
         if (isPartitionRangeQuery)
-            return getRangeCommand(options, limit, nowInSec);
+            return getRangeCommand(queryState, options, limit, nowInSec);
 
         return getSliceCommands(options, limit, nowInSec);
     }
@@ -466,7 +467,7 @@ public class SelectStatement implements CQLStatement
         int userLimit = getLimit(options);
         int userPerPartitionLimit = getPerPartitionLimit(options);
         int pageSize = getPageSize(options);
-        ReadQuery query = getQuery(options, nowInSec, userLimit, userPerPartitionLimit, pageSize);
+        ReadQuery query = getQuery(state, options, nowInSec, userLimit, userPerPartitionLimit, pageSize);
 
         try (ReadExecutionController executionController = query.executionController())
         {
@@ -501,7 +502,7 @@ public class SelectStatement implements CQLStatement
         int userLimit = getLimit(options);
         int userPerPartitionLimit = getPerPartitionLimit(options);
         int pageSize = getPageSize(options);
-        ReadQuery query = getQuery(options, nowInSec, userLimit, userPerPartitionLimit, pageSize);
+        ReadQuery query = getQuery(state, options, nowInSec, userLimit, userPerPartitionLimit, pageSize);
 
         if (aggregationSpec == null && (pageSize <= 0 || (query.limits().count() <= pageSize)))
             return execute(query, options, state, nowInSec, userLimit, queryStartNanoTime);
@@ -534,7 +535,7 @@ public class SelectStatement implements CQLStatement
         int userPerPartitionLimit = getPerPartitionLimit(options);
         int pageSize = getPageSize(options);
 
-        ReadQuery query = getQuery(options, nowInSec, userLimit, userPerPartitionLimit, pageSize);
+        ReadQuery query = getQuery(state, options, nowInSec, userLimit, userPerPartitionLimit, pageSize);
         ContinuousPagingExecutor executor = new ContinuousPagingExecutor(this, options, state, cl, query, queryStartNanoTime, pageSize);
         ResultBuilder builder = ContinuousPagingService.makeBuilder(this, executor, state, options, DatabaseDescriptor.getContinuousPaging());
 
@@ -810,7 +811,7 @@ public class SelectStatement implements CQLStatement
         return getRowFilter(QueryOptions.forInternalCalls(Collections.emptyList()));
     }
 
-    private ReadQuery getRangeCommand(QueryOptions options, DataLimits limit, int nowInSec) throws RequestValidationException
+    private ReadQuery getRangeCommand(QueryState queryState, QueryOptions options, DataLimits limit, int nowInSec) throws RequestValidationException
     {
         ClusteringIndexFilter clusteringIndexFilter = makeClusteringIndexFilter(options);
         if (clusteringIndexFilter == null)
@@ -837,6 +838,15 @@ public class SelectStatement implements CQLStatement
         // and serialized during distribution to replicas in order to avoid performing
         // further lookups.
         command.maybeValidateIndex();
+
+        ClientState clientState = queryState.getClientState();
+        // Warn about SASI usage.
+        if (!clientState.isInternal && !clientState.isSASIWarningIssued() &&
+            command.getIndex(Keyspace.open(cfm.ksName).getColumnFamilyStore(cfm.cfName)) instanceof SASIIndex)
+        {
+            warn(String.format(SASIIndex.USAGE_WARNING, cfm.ksName, cfm.cfName));
+            clientState.setSASIWarningIssued();
+        }
 
         return command;
     }
